# article-relevance

./: .gitignore  CODE_OF_CONDUCT.md  NeotomaEncoderExample.ipynb  PIpeline_creation.ipynb  README.md  Recreating_the_Training_Set_Files.ipynb  Training_model.ipynb  min_example.py  mkdocs.yml  notebook_as_code.py  output_file_test.csv  predictionPipeline.ipynb  pyproject.toml  queryingfromNeotoma.ipynb  requirements.txt  results.json
article_relevance/: __init__.py  clean_orcids.py  data_preprocessing.py  enHelper.py  raw_crossref.py  register_apis.py  relevancePredict.py  relevancePredictTrain.py
data/raw/: labelled_data.csv  neotoma_dois.csv  newdois.csv  project_2_labeled_data.csv
docs/: index.md
sql/: database_creation.sql
src/: predictNewData.py  todo.py  train.py  trainingDataSetUp.py  updateSourceScript.py
src/article_relevance/: NeotomaOneHotEncoder.py  __init__.py  addEmbeddings.py  add_embeddings.py  add_labels.py  api_calls.py  check_apis.py  clean_dois.py  clean_orcids.py  crossRefQuery.py  crossref_query.py  dataPreprocessing.py  data_preprocessing.py  enHelper.py  gddQuery.py  gdd_api_query.py  gdd_query.py  get_model_data.py  loadPQ.py  logs.py  parquetMaxDate.py  predToPQ.py  raw_crossref.py  rec_print.py  register_apis.py  relevancePredict.py  relevancePredictTrain.py  relevance_prediction_model_retrain.py  relevance_prediction_parquet.py  requirements.txt  s3_management.py  updateSource.py
src/sql/: create_database.sql
